# funcai

./: README.md  pyproject.toml  pyrightconfig.json
examples/: botfarm.py  calculator.py  dsl_demo.py  prompt_machine.py  provisor.py
funcai/: __init__.py  combinators.py  funtic.py
funcai/agents/: __init__.py  abc.py  agent.py  tool.py  types.py
funcai/core/: __init__.py  dialogue.py  media.py  message.py  provider.py  types.py
funcai/std/: __init__.py  openai_provider.py  react_agent.py
funcai/std/dsl/: __init__.py  analyze.py  builder.py  compile.py  op.py
funcai/std/providers/: __init__.py  openai.py
